tests/kyverno-policies/pod-resources-limits/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-resources-limits
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: pod-resources-limits
    rule: pods-max-user-resources
    resources:
      - user-test/test-limits-pass-cpu-limits1
      - user-test/test-limits-pass-cpu-limits2
    kind: Pod
    result: pass
  - policy: pod-resources-limits
    rule: pods-max-user-resources
    resources:
      - webservice/test-limits-webservice-pass-limits
    kind: Pod
    result: pass
  - policy: pod-resources-limits
    rule: pods-max-user-resources
    resources:
      - user-test/test-limits-with-init-pass-cpu-limits2
    kind: Pod
    result: pass
  - policy: pod-resources-limits
    rule: pods-max-user-resources
    resources:
      - user-test/test-limits-fail-cpu-limits1
      - user-test/test-limits-fail-cpu-limits2
      - user-test/test-limits-with-init-fail-cpu-limits1
    kind: Pod
    result: fail
  - policy: pod-resources-limits
    rule: pods-max-user-resources
    resources:
      - webservice/test-limits-webservice-fail-cpu-limits
    kind: Pod
    result: fail
  - policy: pod-resources-limits
    rule: pods-max-user-resources
    resources:
      - user-test/test-limits-pass-mem-limits1
      - user-test/test-limits-pass-mem-limits2
      - user-test/test-limits-cpu-requests-missing2
    kind: Pod
    result: pass
  - policy: pod-resources-limits
    rule: pods-max-user-resources
    resources:
      - user-test/test-limits-fail-mem-limits1
      - user-test/test-limits-fail-mem-limits2
    kind: Pod
    result: fail
  - policy: pod-resources-limits
    rule: pods-max-user-resources
    resources:
      - webservice/test-limits-webservice-fail-mem-limits
    kind: Pod
    result: fail
  - policy: pod-resources-limits
    rule: pods-max-user-resources
    resources:
      - webservice/test-limits-dynamo-pass-mem-limits
    kind: Pod
    result: skip
  - policy: pod-resources-limits
    rule: pods-max-user-resources-gen
    resources:
      - webservice/test-limits-pass-job
    kind: Job
    result: pass
  - policy: pod-resources-limits
    rule: pods-max-user-resources-gen
    resources:
      - webservice/test-limits-fail-job
    kind: Job
    result: fail
  - policy: pod-resources-limits
    rule: pods-max-user-resources-gen
    resources:
      - webservice/test-limits-webservice-pass-limits
    kind: Pod
    result: skip
  - policy: pod-resources-limits
    rule: pods-max-user-resources-cron
    resources:
      - webservice/test-limits-pass-cron
    kind: CronJob
    result: pass
  - policy: pod-resources-limits
    rule: pods-max-user-resources-cron
    resources:
      - webservice/test-limits-fail-cron
    kind: CronJob
    result: fail
  - policy: pod-resources-limits
    rule: pods-max-user-resources-cron
    resources:
      - webservice/test-limits-webservice-pass-limits
    kind: Pod
    result: skip
